HTTP endpoints for posts (#68)
Implements the endpoints for interacting with posts:
 * /api/post/[id] (GET, PUT, DELETE)
 * /api/post (POST)

Also includes integration tests

Closes #17
